--- a/app/src/main/res/layout/activity_book_info.xml
+++ b/app/src/main/res/layout/activity_book_info.xml
@@ -184,6 +184,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
         app:layout_constraintTop_toBottomOf="@+id/view_info"
         app:layout_constraintBottom_toTopOf="@+id/fl_action">
 
@@ -192,7 +194,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="12dp"
-            android:text="@string/group"
+            android:text="@string/group_s"
             android:textColor="@color/tv_text_default"
             android:textSize="16sp" />
 
@@ -201,7 +203,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="12dp"
-            android:text="@string/chapter_list"
+            android:text="@string/toc_s"
             android:textColor="@color/tv_text_default"
             android:textSize="16sp" />
 
