--- a/app/src/main/res/layout/activity_audio_play.xml
+++ b/app/src/main/res/layout/activity_audio_play.xml
@@ -29,6 +29,13 @@
         app:layout_constraintTop_toBottomOf="@+id/title_bar"
         app:layout_constraintBottom_toBottomOf="parent" />
 
+    <io.legado.app.ui.widget.BadgeView
+        android:id="@+id/tv_speed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/title_bar"
+        app:layout_constraintRight_toRightOf="parent" />
+
     <io.legado.app.ui.widget.image.CircleImageView
         android:id="@+id/iv_cover"
         android:layout_width="260dp"
