--- a/app/src/main/res/layout/dialog_text_view.xml
+++ b/app/src/main/res/layout/dialog_text_view.xml
@@ -1,13 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/text_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/text_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textIsSelectable="true" />
-
-</LinearLayout>
+    android:padding="12dp"
+    android:textIsSelectable="true" />
