--- a/app/src/main/res/menu/audio_play.xml
+++ b/app/src/main/res/menu/audio_play.xml
@@ -5,5 +5,7 @@
     <item
         android:id="@+id/menu_change_source"
         android:title="@string/change_origin"
+        android:icon="@drawable/ic_exchange"
         app:showAsAction="always" />
+
 </menu>
