--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -39,6 +39,8 @@
         <item>@string/layout_list</item>
         <item>@string/layout_grid3</item>
         <item>@string/layout_grid4</item>
+        <item>@string/layout_grid4</item>
+        <item>@string/layout_grid4</item>
     </string-array>
 
     <string-array name="indent">
