--- a/app/src/main/res/layout/activity_book_read.xml
+++ b/app/src/main/res/layout/activity_book_read.xml
@@ -4,6 +4,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <io.legado.app.ui.widget.page.ContentView
+        android:id="@+id/content_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible" />
+
     <io.legado.app.ui.widget.page.PageView
         android:id="@+id/page_view"
         android:layout_width="match_parent"
