1、调试log修改 2、增加书源字符串分享（RSS未包含） 3、增加导出选中的源（包含书源、RSS、替换规则）

--- a/app/src/main/res/menu/book_source.xml
+++ b/app/src/main/res/menu/book_source.xml
@@ -47,6 +47,11 @@
                 android:title="@string/del_select"
                 app:showAsAction="never" />
 
+            <item
+                android:id="@+id/menu_export_selection"
+                android:title="@string/export_selection"
+                app:showAsAction="never" />
+
         </menu>
 
     </item>
